create github pages

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #009b95;}div[submit-su
 					<div class="title-block align-center">
 						<h4 class="mbr-section-title mbr-fonts-style mbr-bold mbr-black display-6">Nathaniel	Clinch</h4>
 						<p class="mbr-text mbr-fonts-style mbr-black display-7">
-							BESTWORLDAZ@GMAIL.COM 
+							BESTWORLDAZ@GMAIL.COM<br><br>NO BIO SUBMITTED<br> 
 						</p>
 					</div>
 				</div>
@@ -838,7 +838,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #009b95;}div[submit-su
 					<div class="title-block align-center">
 						<h4 class="mbr-section-title mbr-fonts-style mbr-bold mbr-black display-6">Edward	Rus</h4>
 						<p class="mbr-text mbr-fonts-style mbr-black display-7">
-							erus1@asu.edu
+							erus1@asu.edu<br><br>NO BIO SUBMITTED<br>
 						</p>
 					</div>
 				</div>
